# shared-slice

./: .gitmodules  CMakeLists.txt
src/: SharedIterator.cpp  SharedIterator.h  SharedSlice.cpp  SharedSlice.h
src/velocypack/: SharedIterator.h  SharedSlice.cpp  SharedSlice.h
tests/: tests.cpp
tests/cases/: SharedSliceTest.cpp
